--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -1,15 +1,26 @@
-<!--
-  Generated template for the SignupPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-  <ion-navbar>
-    <ion-title>signup</ion-title>
-  </ion-navbar>
-</ion-header>
-
 <ion-content padding>
+    <form [formGroup]="myForm"
+          class="ui form absolute-center">
+      <ion-label class="margin-20">اطلاعات خود را وارد کنید</ion-label>
 
+      <div class="input-with-icon-right">
+        <ion-icon name="md-person"></ion-icon>
+        <ion-input class="form-control transparent-input"
+                   maxlength="11"
+                   placeholder="نام"
+                   [formControl]="myForm.controls['name']">
+        </ion-input>
+      </div>
+
+      <div class="input-with-icon-right">
+        <ion-icon name="ios-text"></ion-icon>
+        <ion-textarea [formControl]="myForm.controls['bio']"
+                      placeholder="بیو"
+                      class="form-control transparent-input">
+        </ion-textarea>
+      </div>
+      <button (click)="checkUserMobile()">
+        ثبت نام
+      </button>
+    </form>
 </ion-content>
