Home page and personal info ui added

--- a/src/pages/personal/personal.html
+++ b/src/pages/personal/personal.html
@@ -1,6 +1,22 @@
 <ion-content padding>
+  <ion-card class="personal-info">
+    <ion-item>
+      <ion-avatar item-start>
+        <div class="avatar-wrapper">
+          <img src="/assets/imgs/user-icon.png">
+          <div class="camera-icon">
+            <ion-icon name="md-camera"></ion-icon>
+          </div>
+        </div>
+      </ion-avatar>
+      <h2>Marty McFly</h2>
+      <p>بیوگرافی</p>
+    </ion-item>
+  </ion-card>
+
+
   <ion-card>
-    <ion-item (click)="goToPersonal()">
+    <ion-item>
       <ion-avatar item-start>
         <img src="/assets/imgs/user-icon.png">
       </ion-avatar>
