--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -34,7 +34,7 @@
       </ion-segment-button>
     </ion-segment>
 
-    <button (click)="checkUserMobile()">
+    <button (click)="registerUser()">
       ثبت نام
     </button>
   </form>
