--- a/src/pages/personal/personal.html
+++ b/src/pages/personal/personal.html
@@ -1,3 +1,7 @@
+<ion-header>
+  <ion-navbar>
+  </ion-navbar>
+</ion-header>
 <ion-content padding>
   <ion-card *ngIf="user" class="personal-info">
     <ion-item>
