--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,6 +1,6 @@
 <ion-tabs icon-start color="primary" tabsPlacement="top">
   <ion-tab [root]="tab1Root" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" tabIcon="contacts"></ion-tab>
-  <ion-tab [root]="tab3Root" tabIcon="contacts"></ion-tab>
+  <ion-tab [root]="tab2Root" tabIcon="medkit"></ion-tab>
+  <ion-tab [root]="tab3Root" tabIcon="search"></ion-tab>
+  <ion-tab [root]="tab4Root" tabIcon="person"></ion-tab>
 </ion-tabs>
