--- a/src/pages/new-post/new-post.html
+++ b/src/pages/new-post/new-post.html
@@ -1,4 +1,5 @@
 <ion-content padding>
+  <ion-icon name="md-close" (click)="close()"></ion-icon>
   <form [formGroup]="myForm"
         class="ui form absolute-center">
     <div class="input-with-border-bottom">
