--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -1,9 +1,40 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>search</ion-title>
-  </ion-navbar>
-</ion-header>
-
 <ion-content padding>
+  <ion-searchbar placeholder="جستجوی نام کاربری،متن یا هشتگ" (ionInput)="getItems($event)"></ion-searchbar>
 
+  <ion-card *ngFor="let post of posts">
+    <ion-item  (click)="goToPersonal(post.userId.phoneNumber)">
+      <ion-avatar item-start>
+        <img src="{{post.userId.image}}">
+      </ion-avatar>
+      <h2>{{post.userId.name}}</h2>
+      <p>{{post.pdate}}</p>
+      <span *ngIf="post.from">
+      <h2 (click)="goToPersonal(post.from.phoneNumber)" >ارسال شده از :{{post.from.name}}</h2>
+      </span>
+    </ion-item>
+    <img src="{{post.file}}">
+    <ion-card-content>
+      <p>{{post.content}}</p>
+    </ion-card-content>
+    <ion-row>
+      <ion-col>
+        <button class="card-operations" ion-button icon-start clear small>
+          <ion-icon name="thumbs-up"></ion-icon>
+          <div>{{post.liked.length}}</div>
+        </button>
+      </ion-col>
+      <ion-col>
+        <button class="card-operations" ion-button icon-start clear small>
+          <ion-icon name="text"></ion-icon>
+          <div>4</div>
+        </button>
+      </ion-col>
+      <ion-col class="card-operations" align-self-center text-center>
+        <button ion-button icon-start clear small>
+          <ion-icon name="share-alt"></ion-icon>
+          <div>9</div>
+        </button>
+      </ion-col>
+    </ion-row>
+  </ion-card>
 </ion-content>
