--- a/src/pages/user-info/user-info.html
+++ b/src/pages/user-info/user-info.html
@@ -1,15 +1,69 @@
-<!--
-  Generated template for the UserInfoPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-  <ion-navbar>
-    <ion-title>user-info</ion-title>
-  </ion-navbar>
-</ion-header>
-
 <ion-content padding>
+  <div class="personal-info">
+    <div class="avatar">
+      <ion-avatar item-start>
+        <div class="avatar-wrapper">
+          <img src="/assets/imgs/user-icon.png">
+          <div class="camera-icon">
+            <ion-icon name="md-camera"></ion-icon>
+          </div>
+        </div>
+      </ion-avatar>
+    </div>
+
+    <div class="infos">
+      <h2>آرمین مومنی</h2>
+      <p>شخسهخهت شسخهتخت </p>
+
+      <ion-item class="toggle-wrapper">
+        <ion-label>حامی می شوم</ion-label>
+        <ion-toggle checked="false"></ion-toggle>
+      </ion-item>
+
+      <ion-item class="toggle-wrapper">
+        <ion-label>حامی می خواهم</ion-label>
+        <ion-toggle checked="false"></ion-toggle>
+      </ion-item>
+    </div>
+  </div>
+
+  <ion-item-group class="posts">
+    <ion-card>
+      <ion-item (click)="goToPersonal(post.userId.phoneNumber)">
+        <ion-avatar item-start>
+          <img src="/assets/imgs/user-icon.png">
+        </ion-avatar>
+        <h2>علی محمودوند</h2>
+        <p>12 اردیبهشت</p>
+        <span>
+        <h2 (click)="goToPersonal(post.from.phoneNumber)">ارسال شده از : آرمین مومنی</h2>
+      </span>
+      </ion-item>
+      <img src="/assets/imgs/15.jpg">
+      <ion-card-content>
+        <p> شسنتنتظطد ظتنطد ن تشسد زد هدب ههش هخیتخهتخهطتر هعزذا هزعا رهطعار طهعزا </p>
+      </ion-card-content>
+      <ion-row>
+        <ion-col>
+          <button class="card-operations" ion-button icon-start clear small>
+            <ion-icon name="thumbs-up"></ion-icon>
+            <div>10</div>
+          </button>
+        </ion-col>
+        <ion-col>
+          <button class="card-operations" ion-button icon-start clear small>
+            <ion-icon name="text"></ion-icon>
+            <div>4</div>
+          </button>
+        </ion-col>
+        <ion-col class="card-operations" align-self-center text-center>
+          <button ion-button icon-start clear small>
+            <ion-icon name="share-alt"></ion-icon>
+            <div>9</div>
+          </button>
+        </ion-col>
+      </ion-row>
+    </ion-card>
+  </ion-item-group>
 
 </ion-content>
