personal page, follow , unfollow

--- a/src/pages/mentors/mentors.html
+++ b/src/pages/mentors/mentors.html
@@ -1,16 +1,14 @@
 <ion-content padding>
-  <ion-label>
-    برترین حامیان
-  </ion-label>
-  <ion-list>
+  <ion-item-group class="messages">
+    <ion-label>پیام های شما</ion-label>
     <ion-item>
       <ion-avatar class="avatar-list" item-start>
         <div>
           <img src="/assets/imgs/user-icon.png">
         </div>
       </ion-avatar>
-      <h2>رسول نقدی</h2>
-      <p>خدا حواسش به همه هست. ما هم یکیش</p>
+      <p>محمد میرزایی درخواست حمایت شما را پذیرفت</p>
+      <button ion-button>گفتگو</button>
     </ion-item>
 
     <ion-item>
@@ -19,22 +17,12 @@
           <img src="/assets/imgs/user-icon.png">
         </div>
       </ion-avatar>
-      <h2>رسول نقدی</h2>
-      <p>خدا حواسش به همه هست. ما هم یکیش</p>
+      <p>آرمین مومنی به حمایت شما نیاز دارد</p>
+      <button ion-button>پذیرفتن</button>
+      <button ion-button> رد درخواست</button>
     </ion-item>
-
-    <ion-item>
-      <ion-avatar class="avatar-list" item-start>
-        <div>
-          <img src="/assets/imgs/user-icon.png">
-        </div>
-      </ion-avatar>
-      <h2>رسول نقدی</h2>
-      <p>خدا حواسش به همه هست. ما هم یکیش</p>
-    </ion-item>
-  </ion-list>
-
-  <ion-label>
+  </ion-item-group>
+  <ion-label class="list-labels">
     حامی می خواهند
   </ion-label>
   <ion-list>
@@ -69,4 +57,38 @@
     </ion-item>
   </ion-list>
 
+  <ion-label class="list-labels">
+    لیست حامیان
+  </ion-label>
+  <ion-list>
+    <ion-item>
+      <ion-avatar class="avatar-list" item-start>
+        <div>
+          <img src="/assets/imgs/user-icon.png">
+        </div>
+      </ion-avatar>
+      <h2>رسول نقدی</h2>
+      <p>خدا حواسش به همه هست. ما هم یکیش</p>
+    </ion-item>
+
+    <ion-item>
+      <ion-avatar class="avatar-list" item-start>
+        <div>
+          <img src="/assets/imgs/user-icon.png">
+        </div>
+      </ion-avatar>
+      <h2>رسول نقدی</h2>
+      <p>خدا حواسش به همه هست. ما هم یکیش</p>
+    </ion-item>
+
+    <ion-item>
+      <ion-avatar class="avatar-list" item-start>
+        <div>
+          <img src="/assets/imgs/user-icon.png">
+        </div>
+      </ion-avatar>
+      <h2>رسول نقدی</h2>
+      <p>خدا حواسش به همه هست. ما هم یکیش</p>
+    </ion-item>
+  </ion-list>
 </ion-content>
