--- a/src/pages/personal/personal.html
+++ b/src/pages/personal/personal.html
@@ -12,6 +12,10 @@
       </ion-avatar>
       <h2>{{user.name}}</h2>
       <p>{{user.bio}}</p>
+
+      <button ion-button>دنبال کردن</button>
+      <button ion-button>حامی شو</button>
+      <button ion-button>حامیت میشم</button>
     </ion-item>
   </div>
 
