--- a/src/pages/new-post/new-post.html
+++ b/src/pages/new-post/new-post.html
@@ -23,7 +23,7 @@
       </ion-col>
     </ion-row>
 
-    <button class="share-post-btn" (click)="registerUser()" ion-button icon-end>
+    <button class="share-post-btn" (click)="newPost()" ion-button icon-end>
       <ion-icon name="arrow-back"></ion-icon>
       ارسال
     </button>
