--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -1,3 +1,6 @@
 <ion-content>
-
+  <ion-icon name="md-close" (click)="close()"></ion-icon>
+  <iframe width="100%" style="height: calc(100% - 80px)"
+          [src]="url|safe">
+  </iframe>
 </ion-content>
