--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,3 @@
-<button (click)="addNewPost()" class="new-post" ion-button outline item-end icon-start>
-  <ion-icon name="add"></ion-icon>
-</button>
-
 <ion-content padding>
   <ion-card *ngFor="let post of posts;let pindex = index" >
     <ion-item  (click)="goToPersonal(post.userId.phoneNumber)">
@@ -43,4 +39,9 @@
       </ion-col>
     </ion-row>
   </ion-card>
+
+  <ion-fab right bottom>
+    <button (click)="addNewPost()" class="new-post" ion-fab>
+      <ion-icon name="add"></ion-icon></button>
+  </ion-fab>
 </ion-content>
