--- a/src/pages/verification-code/verification-code.html
+++ b/src/pages/verification-code/verification-code.html
@@ -1,5 +1,5 @@
 <ion-content padding>
-  <img class="absolute-center" src="/assets/imgs/logo2.png" width="100">
+  <img class="absolute-center" src="/assets/imgs/logo.png" width="100">
   <ion-item-group class="bottom-group">
     <form [formGroup]="myForm"
           class="ui form">
