--- a/src/pages/new-post/new-post.html
+++ b/src/pages/new-post/new-post.html
@@ -11,18 +11,17 @@
 
     <ion-row>
       <ion-col>
-        <button class="card-operations" ion-button icon-start clear small>
-          <ion-icon name="image"></ion-icon>
+        <button (click)="takePhoto(0)" class="card-operations" ion-button icon-start clear small>
+          <ion-icon  name="image"></ion-icon>
         </button>
       </ion-col>
 
-      <ion-col class="card-operations" align-self-center text-center>
+      <ion-col (click)="takePhoto(1)" class="card-operations" align-self-center text-center>
         <button ion-button icon-start clear small>
-          <ion-icon name="videocam"></ion-icon>
+          <ion-icon name="md-camera"></ion-icon>
         </button>
       </ion-col>
     </ion-row>
-
     <button class="share-post-btn" (click)="newPost()" ion-button icon-end>
       <ion-icon name="arrow-back"></ion-icon>
       ارسال
