--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -3,7 +3,7 @@
         class="ui form absolute-center">
 
     <div class="avatar-wrapper">
-      <img src="/assets/imgs/user-icon.png">
+      <img (click)="takePhoto(0)" src="/assets/imgs/user-icon.png">
       <div class="camera-icon">
         <ion-icon name="md-camera"></ion-icon>
       </div>
