--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -1,5 +1,5 @@
 <ion-content padding>
-  <ion-searchbar placeholder="جستجوی نام کاربری،متن یا هشتگ" (ionInput)="getItems($event)"></ion-searchbar>
+  <ion-searchbar placeholder="جستجوی نام کاربری یا متن" (ionInput)="getItems($event)"></ion-searchbar>
 
   <ion-card *ngFor="let post of posts">
     <ion-item  (click)="goToPersonal(post.userId.phoneNumber)">
