--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,6 +1,6 @@
 <ion-tabs icon-start color="primary" tabsPlacement="top">
   <ion-tab [root]="tab1Root" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabIcon="medkit"></ion-tab>
+  <ion-tab [root]="tab2Root" tabIcon="flame"></ion-tab>
   <ion-tab  tabBadge="2" [root]="tab3Root" tabIcon="no-smoking"></ion-tab>
   <ion-tab [root]="tab4Root" tabIcon="search"></ion-tab>
   <ion-tab [root]="tab5Root" tabIcon="person"></ion-tab>
