--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -1,5 +1,6 @@
 <ion-content>
-  <ion-icon name="md-close" (click)="closeChat()"></ion-icon>
+  <button (click)="closeChat()">  <ion-icon name="md-close" ></ion-icon>
+  </button>
   <iframe width="100%" style="height: calc(100% - 80px)"
           [src]="url|safe">
   </iframe>
