add upload post image

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -26,9 +26,8 @@
         </button>
       </ion-col>
       <ion-col>
-        <button class="card-operations" ion-button icon-start clear small>
-          <ion-icon name="text"></ion-icon>
-          <div>4</div>
+        <button (click)="sharePost(post)" class="card-operations" ion-button icon-start clear small>
+          <ion-icon name="md-share"></ion-icon>
         </button>
       </ion-col>
       <ion-col class="card-operations" align-self-center text-center>
