fix next-previus in first page and send pid to server

--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -2,6 +2,6 @@
   <button (click)="closeChat()">  <ion-icon name="md-close" ></ion-icon>
   </button>
   <iframe width="100%" style="height: calc(100% - 80px)"
-          [src]="url|safe">
+          [src]="url">
   </iframe>
 </ion-content>
