--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,4 +1,9 @@
 <ion-content padding>
+
+  <ion-refresher (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+
   <ion-card *ngFor="let post of posts;let pindex = index" >
     <ion-item  (click)="goToPersonal(post.userId.phoneNumber)">
       <ion-avatar item-start>
