--- a/src/pages/mentors/mentors.html
+++ b/src/pages/mentors/mentors.html
@@ -1,4 +1,7 @@
 <ion-content padding>
+  <ion-refresher (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
   <ion-item-group class="messages">
     <ion-label>پیام های شما</ion-label>
     <ion-item>
@@ -26,7 +29,7 @@
     حامی می خواهند
   </ion-label>
   <ion-list>
-    <ion-item *ngFor="let mentor of mentored;let mindex = index">
+    <ion-item *ngFor="let mentor of mentored;let mindex = index" (click)="goToPersonal(mentor.phoneNumber)">
       <ion-avatar class="avatar-list" item-start>
         <div>
           <img src="{{mentor.image}}">
